link logo, fix whitespace thing

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -57,6 +57,9 @@ header
     line-height: 0
     float: left
     margin-top: -33px
+    reset-link()
+    transition()
+    hover-fade: .7
 
     .main
       font-size: 80px
